<resources>
    <string name="app_name">Student</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_classroom">My ClassRoom</string>
    <string name="account">Account</string>
    <string name="library">Library</string>
    <string name="examportal">Exam Portal</string>
    <string name="more">More</string>
    <string name="notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>


    <string name="gender">Select Gender</string>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    />


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_myclassroom">My Classroom</string>
    <string name="nav_message">Message</string>
    <string name="nav_library">My Library</string>
    <string name="nav_classmates">My classmates</string>
    <string name="nav_tutor">My Tutor</string>
    <string name="nav_traininvid">Training videos</string>
    <string name="nav_newCourse">New Course</string>
    <string name="nav_courseguide">Course Guide</string>
    <string name="nav_mockexam">Mock Exam</string>
    <string name="nav_examportal">Exam Portal</string>
    <string name="nav_checkresult">Check Result</string>
    <string name="nav_assignments">My Assignment</string>
    <string name="nav_mymentor">My Mentor</string>
    <string name="nav_notes">My Notes</string>
    <string name="nav_mycalender">My Calender</string>
    <string name="nav_shareapp">Share App</string>
    <string name="nav_playgames">Play Games</string>
    <string name="nav_payment">Payments</string>
    <string name="nav_mycertificate">My Certificates</string>
    <string name="nav_studyres">Study Resources</string>
    <string name="nav_coursemanual">Course Manuals</string>


    <string name="nav_myCourses">My Courses</string>
    <string name="nav_classlive">Class livestrem</string>
    <string name="str_installapp">Install\n Notezilla Notepad app</string>
    <string name="str_makePayment">Make Payment</string>
    <string name="str_paymentHistory">Payment History</string>
    <string name="str_invoice">Invoice</string>
    <string name="str_requestMentor">Request Mentor</string>
    <string name="str_seeprofile">See profile</string>
    <string name="str_requestSent">Request Sent</string>
    <string name="str_courseInterest">Select Courses of Interest</string>
    <string name="str_areacompetence">Area of Competence</string>
    <string name="str_studyBatch">Batch of Study</string>
    <string name="str_Register">Register</string>
    <string name="str_courseregistrer">Course Registration</string>
    <string name="str_instructions">Instructions for Registration</string>
    <string name="str_courseoverview">Course overview</string>
    <string name="hint_fullname">Enter Full name</string>
    <string name="hint_courseSelection">Show Course Selected</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_trainingMode">Select Training\nMode</string>
    <string name="str_faceToFace">Face-To-Face</string>
    <string name="str_eLearning">E-Learning</string>
    <string name="hint_trainingDate">Training Date</string>
    <string name="hint_selectCountry">Select Country(if facetoface select)</string>
    <string name="hint_paymentMode">Payment Mode</string>
    <string name="hint_selectState">Select State/province</string>
    <string name="str_terms">By signing up, you are aggreeing to our Terms of use and Privacy Policy</string>
    <string name="str_submit">Submit</string>
    <string name="str_startacourse">Start a course</string>
    <string name="str_topcourses">Top Courses</string>
    <string name="str_stepToNewCourse">Steps in registering for new course</string>
    <string name="str_getStarted">Get started</string>
    <string name="str_locationFinder">Location Finder</string>
    <string name="hint_trainingCenter">Select Training Center</string>
    <string name="nav_mentors">My Mentors</string>
    <string name="nav_startCourse">Start a course</string>
    <string name="nav_payments">My Payments</string>
    <string name="nav_locationfinder">Location FInder</string>

    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_refferal">Please Enter Referral code</string>
    <string name="enter_passwordold">Please Enter Old Password</string>
    <string name="enter_passwordnew">Please Enter New Password</string>
    <string name="confirm_password">Password does not match.</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="please_wait">Please wait…</string>


</resources>
