<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mycourse"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_myCourses" />
        <item
            android:id="@+id/nav_tutor"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_tutor" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_library" />

        <item
            android:id="@+id/nav_classlive"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_classlive" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_notes" />

        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_assignments" />

        <item
            android:id="@+id/nav_classmates"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_classmates" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_message" />

        <item
            android:id="@+id/nav_mockexam"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_mockexam" />

        <item
            android:id="@+id/nav_mentors"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_mentors" />

        <item
            android:id="@+id/nav_startCourse"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_startCourse" />

        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_payments" />

        <item
            android:id="@+id/nav_locationfinder"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_locationfinder" />

        <item
            android:id="@+id/nav_mycalender"
            android:icon="@drawable/circle_background"
            android:title="@string/nav_mycalender" />
    </group>

</menu>
