<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message2"
        android:title="@string/nav_message" />


    <item
        android:id="@+id/navigation_class_room"
        android:icon="@drawable/ic_classroom"
        android:title="@string/my_classroom" />


    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library"
        android:title="@string/examportal" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_menu"
        android:title="@string/more" />

</menu>
