<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.BottomFragments.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:text="Home > Mentorship > Volunteer"
            android:textColor="@color/black" />

        <ScrollView
            android:id="@+id/layMyProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:layout_below="@id/textView12"
            android:background="@drawable/rounded_black_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:orientation="vertical"
                android:visibility="visible"
                >

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="User Name"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user_placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/gray" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.22"
                    android:background="@drawable/roundedborder"
                    android:gravity="center"
                    android:text="Select Course"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:textSize="15sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|left"
                        android:paddingStart="40dp"
                        android:paddingLeft="40dp"
                        android:text="@string/str_courseInterest"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="4dp"
                        android:src="@drawable/icon_bottomarrow" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.22"
                    android:background="@drawable/roundedborder"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:textSize="15sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|left"
                        android:paddingStart="40dp"
                        android:paddingLeft="40dp"
                        android:text="@string/str_areacompetence"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="4dp"
                        android:src="@drawable/icon_bottomarrow" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.22"
                    android:background="@drawable/roundedborder"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:textSize="15sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|left"
                        android:paddingStart="40dp"
                        android:paddingLeft="40dp"
                        android:text="@string/str_studyBatch"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="4dp"
                        android:src="@drawable/icon_bottomarrow" />


                </RelativeLayout>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/tag_rounded_green"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/str_Register"
                    android:textSize="16sp"/>

            </LinearLayout>

        </ScrollView>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

